uptime-kuma-snp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-snp
  namespace: uptime-kuma-snp
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma-snp
  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
